Reverted overflow fix on popup; jScrollPane needs overflow hidden for moving panes. Fixed location of jScrollPane Styles.

--- a/app/styles/navigator.less
+++ b/app/styles/navigator.less
@@ -126,7 +126,7 @@ body {
 
 ::selection {
     text-shadow: none;
-    background: @orange;
+    background: @blue;
     color: white;
 }
 
@@ -665,28 +665,6 @@ zoom: 1;*/
     #content {
         //background: @green;
     }
-}
-
-// ========================================================================
-//                        jScrollPane Specific Css
-// ========================================================================
-#popupContentWrapper .jspPane{
-    width: 100% !important;
-    border-radius: 8px;
-    background: @lighterGrey;
-    box-shadow: 0px 0px 10px @lightCharcoal;
-}
-
-#popupContentWrapper .jspContainer { //TODO: Find better fix.
-    overflow: visible;
-}
-#popupContentWrapper .jspDrag {
-    background: @lightCharcoal;
-}
-
-#popupContentWrapper .jspCapTop {
-    display: block;
-    height: @popupHeaderHeight;
 }
 
 //--------------------------------------------------------------------------------------------------------------------//
